<resources>
    <string name="app_name">Smart City</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_mobile">Mobile No</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_name">Full name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">New here? \nRegister Now</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="office_name">Office Name :</string>
    <string name="office_address">Office Address :</string>
    <string name="office_time">Office Time :</string>
    <string name="office_contact">Office Contact :</string>
    <string name="office_map">Office Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
